Update for dockerization.  cleanup api to avoid clashes
